<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="app_name">homework_3</string>
    <string name="save">Save</string>
    <string name="habit_name">Habit name</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="type">Type</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="intensity">Intensity</string>
    <string name="periodicity">Periodicity</string>
    <string name="info">Info</string>
    <string name="key_id">ID</string>
    <string name="find">find</string>
    <string name="filters">Filters</string>
    <string name="apikey_doubletapp">3a3cef1b-5197-4673-aebc-d4d714b699ae</string>
</resources>
