<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="734dp"
            tools:context=".EditActivity">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="338dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/habit_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.115"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="338dp"
                android:layout_height="79dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="3"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name"
                app:layout_constraintVertical_bias="0.112"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="336dp"
                android:layout_height="32dp"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_description"
                app:layout_constraintVertical_bias="0.121" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="158dp"
                android:layout_height="67dp"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                app:layout_constraintVertical_bias="0.19">

                <RadioButton
                    android:id="@+id/radio_good"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/radio_bad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bad" />
            </RadioGroup>

            <EditText
                android:id="@+id/edit_intensity"
                android:layout_width="305dp"
                android:layout_height="36dp"
                android:ems="10"
                android:hint="@string/intensity"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintVertical_bias="0.144"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/edit_periodicity"
                android:layout_width="160dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/periodicity"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_intensity"
                app:layout_constraintVertical_bias="0.338"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>